# music-blog-api

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  README.md  Shuttle.toml
app/: Cargo.toml
app/src/: domain.rs  lib.rs
app/src/routes/: mod.rs
server/: Cargo.toml
server/tests/integration/: helpers.rs
server_sdk/src/: lib.rs
src/lib/: lib.rs  service.rs  startup.rs
