[package]
name = "music-blog-api"
version = "0.3.0"
edition = "2021"
description = "An API which powers my music blog, built with Axum and Turso"
readme = "README.md"
repository = "https://github.com/sentinel1909/music-blog-api.git"
license = "MIT"
publish = false

[[bin]]
name = "music-blog-api"
path = "src/bin/main.rs"

[lib]
name = "music_blog_api_lib"
path = "src/lib/lib.rs"

[dependencies]
axum = "0.7.7"
http = "1.1.0"
libsql = "0.3.1"
shuttle-axum = "0.48.0"
shuttle-runtime = { version = "0.48.0", default-features = false  }
shuttle-turso = "0.48.0"
tokio = { version = "1", features = [ "net" ] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [ "cors", "fs", "normalize-path", "request-id", "trace", "util" ] }
tracing = { version = "0.1.40", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = [ "v4" ] }

