[workspace]
members = ["app", "server_sdk", "server", "workspace_hack"]
# By setting `server` as the default member, `cargo run` will default to running the server binary
# when executed from the root of the workspace.
# Otherwise, you would have to use `cargo run --bin server` to run the server binary.
default-members = ["server"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "An API to power my music blog"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeff-mitchell.dev"]
readme = "README.md"
repository = "https://github.com/sentinel1909/music-blog-api.git"
license = "MIT"
publish = false
